--- a/community/index.html
+++ b/community/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nexus Community</title>
-    <link rel="icon" type="image/png" href="../assets/icon.png">
-    <link rel="stylesheet" href="../assets/css/google-dark.css">
+    <link rel="icon" type="image/png" href="/assets/icon.png">
+    <link rel="stylesheet" href="/assets/css/theme-variables.css">
+    <link rel="stylesheet" href="/assets/css/google-dark.css">
     <style>
         /* Main Theme Colors */
         body {
@@ -226,8 +227,8 @@
     <div id="search-result-target" style="padding-top: 10px; padding-bottom: 40px;">
     </div>
 
-    <script src="../js/community-data.js" onerror="alert('Error: Could not find js/community-data.js')"></script>
-    <script src="../js/community-widgets.js" onerror="alert('Error: Could not find js/community-widgets.js')"></script>
+    <script src="/js/community-data.js" onerror="alert('Error: Could not find js/community-data.js')"></script>
+    <script src="/js/community-widgets.js" onerror="alert('Error: Could not find js/community-widgets.js')"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
     <script>
