--- a/community/index.html
+++ b/community/index.html
@@ -227,8 +227,8 @@
     <div id="search-result-target" style="padding-top: 10px; padding-bottom: 40px;">
     </div>
 
-    <script src="/js/community-data.js" onerror="alert('Error: Could not find js/community-data.js')"></script>
-    <script src="/js/community-widgets.js" onerror="alert('Error: Could not find js/community-widgets.js')"></script>
+    <script src="/js/community-data.js"></script>
+    <script src="/js/community-widgets.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
     <script>
